--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="../css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
         <title>Humber BlackBoard [Hemangi Likhia]</title>
     </head>
@@ -10,13 +10,13 @@
      <!--Heading-->
     <header class="head">  
         <div>
-            <img src="../img/Logo.png" class="logo">
+            <img src="img/Logo.png" class="logo">
         </div> 
         <div>
             <h2>WELCOME HEMANGI LIKHIA</h2>   
         </div> 
         <div> 
-            <img src="../img/logout.png" class="logout">
+            <img src="img/logout.png" class="logout">
        </div>
     </header> 
       <!--Navigation Bar-->
@@ -128,7 +128,7 @@
 
     <div id="duedates">
         <h4>Due Dates</h4>
-        <img src="../img/calendar-1.jpg" class="center">
+        <img src="img/calendar-1.jpg" class="center">
         <h5>One assigemnet has due within two weeks</h5>
     </div>
 
