--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </header> 
       <!--Navigation Bar-->
      <section class="nav-body">
-         <a href="#" class="dropdown">=</a>
          <h2><a href="#introduction" class="nav">Home</a><a href="#exam-list" class="nav">Exam list</a><a href="#subject" class="nav">schedule</a><a href="#contact" class="nav">contact</a><a href="#service" class="nav">Service</a></h2>
          <input type="search" size="85" placeholder=" Search bar" class="nav-input">
      </section>
@@ -88,7 +87,7 @@
     </section>
      <!--Menu bar for a new subject-->
     <section class="body-3">
-    <input type="search" size="65" placeholder="www.activity.com">
+    <input type="search" size="65" placeholder="WD118 -Eba Khan">
         <dl id="courses">
             <dt><a href="#coursestream" class="menu">Course Stream</a></dt>
             <dt><a href="#activity" class="menu">Activity/Announcement</a></dt>
@@ -160,7 +159,7 @@
       <h3>created by Hemangi Likhia</h3>
     </div>
     <div>
-        <i class="fab fa-facebook"></i>
+        <i class="fab fa-slack"></i>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-twitter"></i>
         <i class="fab fa-invision"></i>
