--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </header> 
       <!--Navigation Bar-->
      <section class="nav-body">
-         <h2><a href="#introduction" class="nav">Home</a><a href="#exam-list" class="nav">Exam list</a><a href="#subject" class="nav">schedule</a><a href="#contact" class="nav">contact</a><a href="#service" class="nav">Service</a></h2>
+         <h2><a href="#introduction" class="nav">Home</a><a href="#exam-list" class="nav">Exam list</a><a href="#subject" class="nav">Schedule</a><a href="#contact" class="nav">Contact</a><a href="#service" class="nav">Service</a></h2>
          <input type="search" size="85" placeholder=" Search bar" class="nav-input">
      </section>
      <!--Introduction-->
     <section class="body-1" id="introduction">
-    <div class="introduction">
-        <h1 class="heading">Web design & database development</h1>
-        <p class="detail"><b>The web design process starts with a visual concept, which you could sketch by hand or with software like Photoshop. Then, you use HTML and CSS to build the website. HTML and CSS are the codes for writing web pages. HTML handles the basic structure and ‘bones’ of your page, while CSS handles the style and appearance.</b></p> 
-    </div>
+        <div class="introduction">
+            <h1 class="heading">Web design & database development</h1>
+            <p class="detail"><b>The web design process starts with a visual concept, which you could sketch by hand or with software like Photoshop. Then, you use HTML and CSS to build the website. HTML and CSS are the codes for writing web pages. HTML handles the basic structure and ‘bones’ of your page, while CSS handles the style and appearance.</b></p> 
+        </div>
     </section>    
      <!--Subject part & Exam list-->
     <section class="body-2">
