--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header> 
       <!--Navigation Bar-->
      <section class="nav-body">
-         <h2><a href="#introduction" class="nav">Home</a><a href="#exam-list" class="nav">Exam list</a><a href="#subject" class="nav">schedule</a><a href="#contact" class="nav">contact</a><a href="#service" class="nav">Service</a></h2>
+         <h2><a href="#introduction" class="nav">Home</a><a href="#exam-list" class="nav">Exam list</a><a href="#subject" class="nav">Schedule</a><a href="#contact" class="nav">Contact</a><a href="#service" class="nav">Service</a></h2>
          <input type="search" size="85" placeholder=" Search bar" class="nav-input">
      </section>
      <!--Introduction-->
